# ChangeLog for net-misc/wget
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/wget/ChangeLog,v 1.121 2010/01/17 22:28:20 vapier Exp $

*wget-1.12-r1 (17 Jan 2010)

  17 Jan 2010; Mike Frysinger <vapier@gentoo.org> +wget-1.12-r1.ebuild,
  +files/wget-1.12-sni.patch:
  Add SNI support #301312 by Andreas Nüßlein.

  18 Oct 2009; Brent Baude <ranger@gentoo.org> wget-1.12.ebuild:
  Marking wget-1.12 ppc64 for bug 286058

  15 Oct 2009; Mounir Lamouri <volkmar@gentoo.org> wget-1.12.ebuild:
  Stabilizing for ppc, bug 286058

  14 Oct 2009; Mike Frysinger <vapier@gentoo.org>
  files/wget-1.12-debug-tests.patch:
  Update debug test patch to cover USE=idn #288156 by Paolo Pedroni and info
  from Kent Fredric.

  07 Oct 2009; Markus Meier <maekke@gentoo.org> wget-1.12.ebuild:
  amd64 stable, bug #286058

  07 Oct 2009; Raúl Porcel <armin76@gentoo.org> wget-1.12.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #286058

  06 Oct 2009; Jeroen Roovers <jer@gentoo.org> wget-1.12.ebuild:
  Stable for HPPA (bug #286058).

  06 Oct 2009; Christian Faulhammer <fauli@gentoo.org> wget-1.12.ebuild:
  stable x86, security bug 286058

  26 Sep 2009; Mike Frysinger <vapier@gentoo.org> wget-1.12.ebuild,
  +files/wget-1.12-debug-tests.patch:
  Automatically skip tests that require USE=debug #286173 by Alexis Ballier.

  23 Sep 2009; Mike Frysinger <vapier@gentoo.org> wget-1.12.ebuild,
  +files/wget-1.12-linking.patch, metadata.xml:
  Add support for USE=idn by Lars Wendler #286058, add support for USE=ntlm,
  and forward port the linking patch.

*wget-1.12 (23 Sep 2009)

  23 Sep 2009; Mike Frysinger <vapier@gentoo.org> +wget-1.12.ebuild:
  Version bump #286058 by Alex Legler.

  07 Sep 2009; Jeroen Roovers <jer@gentoo.org> wget-1.11.4.ebuild:
  Stable for HPPA (bug #281876).

  01 Sep 2009; Raúl Porcel <armin76@gentoo.org> wget-1.11.4.ebuild:
  arm/ia64/s390/sh/sparc stable wrt #281876
