@@ -1,6 +1,8 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/wget/Attic/wget-1.12-r1.ebuild,v 1.1 2010/01/17 22:28:20 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/wget/Attic/wget-1.12-r1.ebuild,v 1.2 2010/02/14 00:43:08 vapier Exp $
+
+EAPI="2"
 
 inherit eutils flag-o-matic
 
@@ -11,7 +13,7 @@ SRC_URI="mirror://gnu/wget/${P}.tar.bz2"
 LICENSE="GPL-3"
 SLOT="0"
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~sparc-fbsd ~x86-fbsd"
-IUSE="debug idn ipv6 nls ntlm ssl static"
+IUSE="debug idn ipv6 nls ntlm +ssl static"
 
 RDEPEND="idn? ( net-dns/libidn )
 	ssl? ( >=dev-libs/openssl-0.9.6b )"
@@ -24,15 +26,13 @@ pkg_setup() {
 	fi
 }
 
-src_unpack() {
-	unpack ${A}
-	cd "${S}"
+src_prepare() {
 	epatch "${FILESDIR}"/${PN}-1.12-linking.patch
 	epatch "${FILESDIR}"/${PN}-1.12-sni.patch #301312
 	epatch "${FILESDIR}"/${P}-debug-tests.patch #286173
 }
 
-src_compile() {
+src_configure() {
 	# openssl-0.9.8 now builds with -pthread on the BSD's
 	use elibc_FreeBSD && use ssl && append-ldflags -pthread
 
@@ -44,9 +44,7 @@ src_compile() {
 		$(use_enable ipv6) \
 		$(use_enable nls) \
 		$(use ssl && use_enable ntlm) \
-		$(use_enable debug) \
-		|| die
-	emake || die
+		$(use_enable debug)
 }
 
 src_install() {
