@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/wget
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/wget/ChangeLog,v 1.121 2010/01/17 22:28:20 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/wget/ChangeLog,v 1.122 2010/02/14 00:43:08 vapier Exp $
+
+  14 Feb 2010; Mike Frysinger <vapier@gentoo.org> wget-1.12-r1.ebuild:
+  Upgrade to EAPI=2 so we can set +ssl in IUSE #304887 by Kerin Millar.
 
 *wget-1.12-r1 (17 Jan 2010)
 
